--- a/public/index.html
+++ b/public/index.html
@@ -2,16 +2,16 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="images/logoColor.png" />
+    <link rel="icon" href="images/LOGO-MAIN.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Welcome to the platform that is going to make meal planning easier! We will calculate your calorie needs, help you create and update your shopping list, and make sure you are always set with the right amount of good food! "
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="apple-touch-icon" href="images/LOGO-MAIN.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Mealpaka</title>
+    <title>Meal Plan</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
